# compgeom-hw

./: .gitignore  CMakeLists.txt  README.md
a/: main  main.cpp  optimization.h  output.txt
b/: input.txt  main.cpp
c/: main.cpp
d/: input.txt  main.cpp
e/: input.txt  main.cpp
f1/: input.txt  main.cpp
f2/: input.txt  main.cpp
f3/: main.cpp
kp/: .gitignore  grapj.py  input.txt  legacy  main.cpp  run.sh
